--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Deploy to test server
 on:
     push:
         branches:
-            - master
+            - main
     workflow_dispatch:
 
 jobs:
