--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
         image: app
         build:
             context: .
-            dockerfile: Dockerfile
+            dockerfile: dockerfile
         restart: always
         ports:
             - "8080:8080" 
