--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "liveServer.settings.multiRootWorkspaceName": "project2",
-    "liveServer.settings.port": 5501
+    "liveServer.settings.port": 5501,
+    "editor.find.autoFindInSelection": "multiline"
 }
